<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.risevision.gcslogs</groupId>
  <artifactId>gcslogs</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>war</packaging>
  
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<google.client.version>1.23.0</google.client.version>
		<appengine.api.version>1.9.63</appengine.api.version>
  </properties>

  <profiles>
    <profile>
      <id>test</id>
      <activation>
            <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <resources>
          <resource>
            <directory>src/globals/test</directory>
            <filtering>false</filtering>
          </resource>
        </resources>
      </build>
    </profile>
    <profile>
      <id>prod</id>
      <build>
        <resources>
          <resource>
            <directory>src/globals/prod</directory>
            <filtering>false</filtering>
          </resource>
        </resources>
      </build>
    </profile>
  </profiles>

  <build>
    <resources>
      <resource>
        <directory>src/private-keys</directory>
        <filtering>false</filtering>
      </resource>
      <resource>
        <directory>src/log-schemas</directory>
        <filtering>false</filtering>
      </resource>
    </resources>

    <plugins>
      <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<version>3.7.0</version>
		<artifactId>maven-compiler-plugin</artifactId>
		<configuration>
			<source>1.8</source>
			<target>1.8</target>
			<fork>true</fork>
			<compilerArguments>
				<Xmaxerrs>5</Xmaxerrs>
			</compilerArguments>
		</configuration>
	  </plugin>
	  <plugin>
		<groupId>com.google.cloud.tools</groupId>
		<artifactId>appengine-maven-plugin</artifactId>
		<version>1.3.2</version>
		<configuration>
			<!-- deploy configuration -->
			<enableJarClasses>false</enableJarClasses>
			<port>8888</port>
		</configuration>
	  </plugin>
	  <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-surefire-plugin</artifactId>
		<version>2.20.1</version>
		<configuration>
			<forkCount>3</forkCount>
			<reuseForks>true</reuseForks>
			<runOrder>alphabetical</runOrder>
			<argLine>-XX:MaxJavaStackTraceDepth=5 -XX:MaxPermSize=512m -XX:PermSize=216m</argLine>
		</configuration>
	  </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <forkCount>3</forkCount>
          <failIfNoTests>true</failIfNoTests>
          <argLine>-XX:MaxJavaStackTraceDepth=5</argLine>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>jetty</groupId>
      <artifactId>javax.servlet</artifactId>
      <version>5.1.12</version>
    </dependency>
    <dependency>
      <groupId>com.google.api-client</groupId>
      <artifactId>google-api-client</artifactId>
      <version>${google.client.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.apis</groupId>
      <artifactId>google-api-services-storage</artifactId>
      <version>v1-rev124-1.23.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.apis</groupId>
      <artifactId>google-api-services-bigquery</artifactId>
      <version>v2-rev377-1.23.0</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-1.0-sdk</artifactId>
      <version>${appengine.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20141113</version>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-testing</artifactId>
      <version>${appengine.api.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-api-stubs</artifactId>
      <version>${appengine.api.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.appengine</groupId>
      <artifactId>appengine-tools-sdk</artifactId>
      <version>${appengine.api.version}</version>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>2.3.1</version>
    </dependency>
  </dependencies>
</project>
